ch implement attendant's cart

--- a/UI/cart.html
+++ b/UI/cart.html
@@ -63,7 +63,7 @@
 							<nav>
 								<ul>
 									<li><a href="./attendant-dashboard.html">Products</a></li>
-									<li><a href="./records.html">Records</a></li>
+									<li><a href="./attendant-records.html">Records</a></li>
 									<li><a href="#"><span class="selected">Cart</span></a></li>
 								</ul>
 							</nav>
@@ -71,87 +71,79 @@
 						</div>
 						<div class="container">
 							<div class="wrapper">
-								 <span class="tip">Hover an item for details. Click for actions</span>
+								 <span class="tip">Click on item to remove</span>
 								<input type="button" class="confirm checkout" value="checkout"></input>	
 								<div class="items-box">
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-										</div>
-									</div>
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="displayDialog();">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>		
-											Quantity: 300
+										<div class="quant-avail">
+										 Quantity: 500
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-										</div>
-									</div>
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="displayDialog();">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
+										<div class="quant-avail">
+										 Quantity: 500
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-										</div>
-									</div>
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="displayDialog();">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
+										<div class="quant-avail">
+										 Quantity: 500
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
-										</div>
-									</div>
-									<div class="item tooltip" onclick="displayDialog();">
+									<div class="item" onclick="displayDialog();">
 										<img src="./images/item1.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
+										<div class="quant-avail">
+										 Quantity: 500
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
+									<div class="item" onclick="displayDialog();">
+										<img src="./images/item1.jpg">
+										<div class="quant-avail">
+										 Quantity: 500
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item tooltip" onclick="displayDialog();">
-										<img src="./images/item2.jpg">
-										<div class="tooltiptext">
-											Price: $8
-											<br>
-											Quantity: 300
+									<div class="item" onclick="displayDialog();">
+										<img src="./images/item1.jpg">
+										<div class="quant-avail">
+										 Quantity: 500
+										</div>
+										<div class="name-description">
+										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
+										</div>
+										<div class="price">
+										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
 								</div>
