--- a/UI/login.html
+++ b/UI/login.html
@@ -4,6 +4,8 @@
 	<meta name="viewport" content="width=device-width">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="./styles/main.css" rel="stylesheet">
+	<link href="./styles/extras.css" rel="stylesheet">
+	<script type="text/javascript" src="./scripts/login.js"></script>
 	<title>Store-Manager | Login</title>
 </head>
 
@@ -32,7 +34,7 @@
 			<section>
 				<div id="user-form">
 					<div class="container">
-						<form method="post">
+						<form method="post" action = "javascript:login()">
 							<h3>User Login</h3>
 							<div>
 								<label>Email:</label>
