--- a/UI/admin.html
+++ b/UI/admin.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed" rel="stylesheet">
 	<link href="./styles/main.css" rel="stylesheet">
 	<link href="./styles/extras.css" rel="stylesheet">
+	<script type="text/javascript" src="./scripts/admin.js"></script>
 	<title>Store-Manager | Admin Dashboard</title>
 </head>
 
@@ -46,12 +47,12 @@
 				<div class="page-content">
 					<div class="profile-info">
 						<div class="profile-photo-container"></div>
-						<div class="label">Name:</div>
-						<div class="details">Jax Bishop</div>
-						<div class="label">Email:</div>
-						<div class="details">bishopjack@gmail.com</div>
+						<div class="label" >Name:</div>
+						<div class="details" id="username"></div>
+						<div class="label" >Email:</div>
+						<div class="details" id="email"></div>
 						<div class="label">Job Title:</div>
-						<div class="details">Admin</div>
+						<div class="details" id="level"></div>
 						<div class="label">Last logged in:</div>
 						<div class="details">09-Oct-18 4:07pm</div>
 					</div>
@@ -81,6 +82,7 @@
 										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
+
 									<div class="item" onclick="gotoProduct()">
 										<img src="./images/item1.jpg">
 										<div class="quant-avail">
@@ -93,102 +95,7 @@
 										  $<span class="actual-price">8</span> per item
 										</div>
 									</div>
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
+									
 								</div>
 							</div>
 						</div>
