ft(admin view product details)

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="./admin.html">Home</a></li>
 						<li><a href="#">About</a></li>
-						<li><a href="./login.html">Sign Out</a></li>
+						<li><a href="#" onclick="signout();" >Sign Out</a></li>
 					</ul>
 				</nav>
 				<div class="dropdown">
@@ -70,7 +70,7 @@
 						<div class="container">						
 							<div class="wrapper">
 								<div class="items-box">
-									<div class="item" onclick="gotoProduct()">
+									<div class="item">
 										<img src="./images/item1.jpg">
 										<div class="quant-avail">
 										 500 available
@@ -81,21 +81,7 @@
 										<div class="price">
 										  $<span class="actual-price">8</span> per item
 										</div>
-									</div>
-
-									<div class="item" onclick="gotoProduct()">
-										<img src="./images/item1.jpg">
-										<div class="quant-avail">
-										 500 available
-										</div>
-										<div class="name-description">
-										Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-										</div>
-										<div class="price">
-										  $<span class="actual-price">8</span> per item
-										</div>
-									</div>
-									
+									</div>									
 								</div>
 							</div>
 						</div>
