--- a/UI/modify-product.html
+++ b/UI/modify-product.html
@@ -4,6 +4,8 @@
 	<meta name="viewport" content="width=device-width">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="./styles/main.css" rel="stylesheet">
+	<link href="./styles/extras.css" rel="stylesheet">
+	<script type="text/javascript" src="./scripts/modify-product.js"></script>
 	<title>Store-Manager | Modify Product</title>
 </head>
 
@@ -28,23 +30,32 @@
 			<section>
 				<div id="user-form">
 					<div class="container">
-						<form method="post">
+						<form method="post" onsubmit=" return doModify();">
 							<h3>Modify Product</h3>
 							<div>
 								<label>Name:</label>
 								<br>
-								<input type="text"  placeholder="Enter Product Name" name="pname" required></input>
+								<input type="text"  placeholder="Enter Product Name" id="pname" pattern=".{3,}" required title = "Name must be at least 3 characters"></input>
 							</div>
 							<div>
 								<label>Quantity:</label>
 								<br>
-								<input type="number"  placeholder="Enter Product Quantity" name="pquantity" required></input>
+								<input type="text"  placeholder="Enter Product Quantity" id="pquantity"  pattern="^\+?[1-9][\d]*$" required title="Quantity must be a positive integer"></input>
 							</div>
 							<div>
-								<label>Category:</label>
+								<label>Price:</label>
 								<br>
-								<input type="text"  placeholder="Enter Product Price" name="pprice" required></input>
+								<input type="text"  placeholder="Enter Product Price" id="pprice"pattern="^\+?[1-9][\d]*$" required title="Price must be a positive integer"></input>
 							</div>
+							<div>
+								<label>Minimum Inventory:</label>
+								<br>
+								<input type="text"  placeholder="Enter Minimum Inventory" id="pinvent" pattern="^\+?[1-9][\d]*$" required title="Minimum inventory must be a positive integer"></input>
+							</div>
+							<div class="not-registered">
+								<span class="pop-up"></span>
+								<span class="lds-hourglass"></span>
+							</div>	
 							<button type="submit">Modify</button>
 							<br>				
 						</form>
