--- a/UI/product-details.html
+++ b/UI/product-details.html
@@ -60,16 +60,13 @@
 						
 						<div class="product-details" id="product">
 							<img src="./images/item1.jpg">
-							<div class="quant-avail">
-							</div>
-							<div class="min-invent">
-							</div>
-							<div class="name-description detailed-description">
-							</div>
+							<div class="quant-avail"></div>
+							<div class="min-invent"></div>
+							<div class="name-description detailed-description"></div>
 							<div class="price detailed-price">
 								$<span class="actual-price"></span> per item
 							</div>
-							<input type="button" class="confirm modify" value="Modify" onclick="window.location.href='./modify-product.html';"></input>	
+							<input type="button" class="confirm modify" id = "modify" value="Modify"></input>
 							<input type="button" class="delete" value="Delete" onclick="displayDialog();"></input>	
 						</div>
 					</div>
