ch(add attendant create route)

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -55,6 +55,7 @@
 						<div class="details" id="level"></div>
 						<div class="label">Last logged in:</div>
 						<div class="details">09-Oct-18 4:07pm</div>
+						<input type="button" class="confirm checkout new-attendant" value="New Attendant" onclick="window.location.href='./create-attendant.html';"></input>	
 					</div>
 					<div class="attendant-content">
 						<div class = "container">			
