--- a/UI/create-attendant.html
+++ b/UI/create-attendant.html
@@ -4,6 +4,8 @@
 	<meta name="viewport" content="width=device-width">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="./styles/main.css" rel="stylesheet">
+	<link href="./styles/extras.css" rel="stylesheet">
+	<script type="text/javascript" src="./scripts/create-attendant.js"></script>
 	<title>Store-Manager | Create Attendant</title>
 </head>
 
@@ -27,23 +29,22 @@
 	<section>
 	<div id="user-form">
 		<div class="container">
-			<form method="post">
+			<form method="post" onsubmit=" return createAttendant();">
 				<h3>New Attendant</h3>
 				<div>
 					<label>Name:</label>
 					<br>
-					<input type="text"  placeholder="Enter Attendant's Name" name="aname" required></input>
+					<input type="text"  id="name" placeholder="Enter Attendant's Name" name="aname" pattern=".{3,}" required title = "Name must be at least 3 characters"></input>
 				</div>
 				<div>
 					<label>Email:</label>
 					<br>
-					<input type="email"  placeholder="Enter Attendant's Email" name="aemail" required></input>
+					<input type="email" id="email" placeholder="Enter Attendant's Email" name="aemail" required></input>
 				</div>
-				<div>
-					<label>Qualification:</label>
-					<br>
-					<input type="text"  placeholder="Enter Attendant's Qualification" name="aquantity" required></input>
-				</div>
+				<div class="not-registered">
+								<span class="pop-up"></span>
+								<span class="lds-hourglass"></span>
+			    </div>	
 				<button type="submit">Create</button>
 				<br>				
 			</form>
