--- a/UI/attendant-product-details.html
+++ b/UI/attendant-product-details.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed" rel="stylesheet">
 	<link href="./styles/main.css" rel="stylesheet">
 	<link href="./styles/extras.css" rel="stylesheet">
+	<script type="text/javascript" src="./scripts/attendant-product-details.js"></script>
 	<title>Store-Manager | Admin Dashboard</title>
 </head>
 
@@ -20,7 +21,7 @@
 					<ul>
 						<li><a href="./admin.html">Home</a></li>
 						<li><a href="#">About</a></li>
-						<li><a href="./login.html">Sign Out</a></li>
+						<li><a href="#" onclick="signout();" >Sign Out</a></li>
 					</ul>
 				</nav>
 				<div class="dropdown">
@@ -47,31 +48,26 @@
 					<div class="profile-info">
 						<div class="profile-photo-container"></div>
 						<div class="label">Name:</div>
-						<div class="details">Jax Bishop</div>
+						<div class="details" id="username">Mayor Steve</div>
 						<div class="label">Email:</div>
-						<div class="details">bishopjack@gmail.com</div>
+						<div class="details" id="email">stevemayor@gmail.com</div>
 						<div class="label">Job Title:</div>
-						<div class="details">Admin</div>
+						<div class="details" id="level">Attendant</div>
+						<div class="label">Total Sales:</div>
+						<div class="details">81</div>
 						<div class="label">Last logged in:</div>
 						<div class="details">09-Oct-18 4:07pm</div>
 					</div>
 					<div class="attendant-content">
-						
-						<div class="product-details">
+						<div class="product-details" id="product">
 							<img src="./images/item1.jpg">
-							<div class="quant-avail">
-								500 available
-							</div>
-							<div class="min-invent">
-								Minimum Inventory: 30
-							</div>
-							<div class="name-description detailed-description">
-								Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers Original VR Headset for Gamers and Fun Lovers
-							</div>
+							<div class="quant-avail"></div>
+							<div class="min-invent"></div>
+							<div class="name-description detailed-description"></div>
 							<div class="price detailed-price">
-								$<span class="actual-price">8</span> per item
+								$<span class="actual-price"></span> per item
 							</div>
-							<input type="button" class="confirm modify" value="Add to Cart" onclick="displayDialog();"></input>	
+							<input type="button" class="confirm modify" id="cart-button" value="Add to Cart" onclick="displayDialog();"></input>
 						</div>
 					</div>
 				</div>
