--- a/UI/attendant-dashboard.html
+++ b/UI/attendant-dashboard.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="./styles/main.css" rel="stylesheet">
 	<link href="./styles/extras.css" rel="stylesheet">
-	<script type="text/javascript" src="./scripts/admin.js"></script>
+	<script type="text/javascript" src="./scripts/attendant.js"></script>
 	<title>Store-Manager | Attendant Dashboard</title>
 </head>
 
