--- a/UI/attendant-records.html
+++ b/UI/attendant-records.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed" rel="stylesheet">
 	<link href="./styles/main.css" rel="stylesheet">
 	<link href="./styles/extras.css" rel="stylesheet">
+	<script type="text/javascript" src="./scripts/records.js"></script>
 	<title>Store-Manager | Admin Dashboard</title>
 </head>
 
@@ -46,12 +47,12 @@
 				<div class="page-content">
 					<div class="profile-info">
 						<div class="profile-photo-container"></div>
-						<div class="label">Name:</div>
-						<div class="details">Jax Bishop</div>
-						<div class="label">Email:</div>
-						<div class="details">bishopjack@gmail.com</div>
+						<div class="label" >Name:</div>
+						<div class="details" id="username"></div>
+						<div class="label" >Email:</div>
+						<div class="details" id="email"></div>
 						<div class="label">Job Title:</div>
-						<div class="details">Admin</div>
+						<div class="details" id="level"></div>
 						<div class="label">Last logged in:</div>
 						<div class="details">09-Oct-18 4:07pm</div>
 					</div>
@@ -67,7 +68,7 @@
 						</div>
 						<div class="container">						
 							<div class="wrapper">
-								<table>
+								<table id="orders-table">
 									<tr>
 										<th>Attendant ID</th>
 										<th>Attendant Name</th> 
@@ -75,38 +76,6 @@
 										<th>Time Created</th>
 										<th>Total Item</th>
 										<th>Order Price</th>
-									</tr>
-									<tr onclick="getOrderId(event);">
-										<td>1</td>
-										<td>John Doe</td> 
-										<td>161283928</td>
-										<td>649298092</td>
-										<td>25</td>
-										<td>300</td>
-									</tr>
-									<tr>
-										<td>1</td>
-										<td>John Doe</td> 
-										<td>161283928</td>
-										<td>649298092</td>
-										<td>25</td>
-										<td>300</td>
-									</tr>
-									<tr>
-										<td>1</td>
-										<td>John Doe</td> 
-										<td>161283928</td>
-										<td>649298092</td>
-										<td>25</td>
-										<td>300</td>
-									</tr>
-									<tr>
-										<td>1</td>
-										<td>John Doe</td> 
-										<td>161283928</td>
-										<td>649298092</td>
-										<td>25</td>
-										<td>300</td>
 									</tr>
 								</table>
 							</div>
