ft(Consume route for creating sale reord with ui)

--- a/UI/cart.html
+++ b/UI/cart.html
@@ -72,7 +72,7 @@
 						<div class="container">
 							<div class="wrapper">
 								 <span class="tip">Click on item to remove</span>
-								<input type="button" class="confirm checkout" value="checkout"></input>	
+								<input type="button" class="confirm checkout" value="checkout" onclick="doCheckout();"></input>	
 								<div class="items-box">
 									<div class="item" onclick="gotoProductAttendant()">
 										<img src="./images/item1.jpg">
