--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!Doctype html>
 <html>
    <head>
-   <meta charset=“UTF-8”>
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+   
    <title>Store Manager</title>
    <link rel="icon" type="image/png" href="/images/favicon.png"/>
 </head>
