--- a/UI/admin.html
+++ b/UI/admin.html
@@ -25,7 +25,7 @@
 					</ul>
 				</nav>
 				<div class="dropdown">
-					<img src="./images/icon-menu.png">
+					<img src="../images/icon-menu.png">
 					<div class="profile-info">
 						<div class="profile-photo-container"></div>
 						<div class="label">Name:</div>
