--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
    <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-   
+   <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed" rel="stylesheet">
    <title>Store Manager</title>
    <link rel="icon" type="image/png" href="/images/favicon.png"/>
 </head>
