ch(add form components)

--- a/UI/create-product.html
+++ b/UI/create-product.html
@@ -41,7 +41,7 @@
 								<input type="number"  placeholder="Enter Product Quantity" name="pquantity" required></input>
 							</div>
 							<div>
-								<label>Category:</label>
+								<label>Price:</label>
 								<br>
 								<input type="text"  placeholder="Enter Product Price" name="pprice" required></input>
 							</div>
