ch(render button based on user)

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <title>Store Manager</title>
-   <link rel="icon" type="image/png" href="/images/favicon.png"/>
-   <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed" rel="stylesheet">
+   <link rel="icon" type="image/png" href="..src/images/favicon.png"/>
 </head>
-   <body>
-       <div id = "app" ></div>
-        <script src = "/bundle.js"></script>
-        
+   <body id = "app">
+        <script src = "/bundle.js"></script>    
   </body>
 
 </html>
